--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>To do list</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,200&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <div>
     <header>
         <h1>My ToDo List</h1>
@@ -15,7 +19,7 @@
 <!-- my rodo lists start -->
 <form>
     <div class="search">
-        <input type="text" class="todo-input" placeholder="ADD:.......">
+        <input type="text" class="todo-input" placeholder="Listeni Oluştur">
         <button class="todo-button" type="submit">
         <i class="fas fa-plus-circle"></i>
     </button>
